sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:23: error: Unmatched closing brace '}' ignored here
}
^